err/indra.ipc.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/indra'...
Listing './lib/python3.5/site-packages/indra/ipc'...
Compiling './lib/python3.5/site-packages/indra/ipc/russ.py'...
***   File "./lib/python3.5/site-packages/indra/ipc/russ.py", line 93
    raise UnknownDirective, format_str[pos:end + 1]
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/indra/ipc/saranwrap.py'...
***   File "./lib/python3.5/site-packages/indra/ipc/saranwrap.py", line 190
    _prnt(`str`)
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/indra/ipc/siesta.py'...
***   File "./lib/python3.5/site-packages/indra/ipc/siesta.py", line 64
    except (llsd.LLSDParseError, JsonDecodeError, TypeError), err:
                                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/indra/ipc/siesta_test.py'...
***   File "./lib/python3.5/site-packages/indra/ipc/siesta_test.py", line 43
    'long_max': 2147483647L,
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/indra/ipc/webdav.py'...
***   File "./lib/python3.5/site-packages/indra/ipc/webdav.py", line 346
    print response.getheader ('Date')
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/indra/ipc/xml_rpc.py'...
***   File "./lib/python3.5/site-packages/indra/ipc/xml_rpc.py", line 128
    print what
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/indra.ipc-1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
